--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^9.6.7",
     "pinia": "^2.0.11",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
